--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "jay-es",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "@types/chrome": "^0.0.289"
   }
 }
